<resources>
    <string name="app_name">CitiFit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_citifit_dashboard">CitifitDashBoardActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reward">RewardActivity</string>

    <string name="intro_text">Behold, a data dump from the Fitness API! Check the menu for more actions!</string>
    <string name="action_delete_session">Delete step count data</string>


    <string name="tasks">Tasks</string>
    <string name="goal">Goal</string>
    <string name="profile">Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="credentials_required">You need to login with your CitiBank \n credentials to begin</string>
    <string name="dont_have_account">Don\'t have a CitiBank Account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="begin">Begin</string>

    <!--Font Tags-->
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="content">content</string>
    <!--Reward Activity tags-->

    <string name="goals_to_be_achieved">Goals to be achieved in %s days</string>
    <string name="mrp">MRP: %s</string>
    <string name="points_needed">Points Needed: %s</string>
    <string name="reward_name">Reward Name</string>
    <string name="reward_image">Reward Image</string>

    <string name="lets_get_started">Awesome! Let\'s get you started</string>
    <string name="chose_your_reward">Choose your reward</string>
    <string name="reward_and_task">We will prepare your daily tasks for you to follow based on your goal.</string>
    <string name="skip">SKIP</string>

    <!--Tabs Text - Tasks-->
    <string name="task_tab_header">Your Current Goal</string>
    <string name="task_type_run">Run</string>
    <string name="task_type_walk">Walk</string>
    <string name="task_type_cycle">Cycle</string>
    <string name="task_type_run_unit">kms</string>
    <string name="task_type_walk_unit">kms</string>
    <string name="task_type_cycle_unit">kms</string>

    <!-- Goals Screen Text-->
    <string name="your_current_goal">Your Current Task</string>
    <string name="change_goal">Change Goal</string>
    <string name="mrp_goal">MRP</string>
    <string name="citi_points">Citi Points</string>
    <string name="you_are_doing_great">You\'re doing great!</string>
    <string name="current_points">Current Points</string>
    <string name="days_left">Days Left</string>
    <string name="weekly_track">Weekly Track</string>

    <string name="home">Home</string>

    <!--Profile Fragment Tags-->
    <string name="redeem">Redeem</string>
    <string name="track">Track</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_citipoints">%s Citi Points</string>
    <string name="profile_image">Profile Image</string>

    <!--Success Dialog Tags-->
    <string name="congrats">Congrats!</string>
    <string name="closer_to_goal">You are 200 points closer to goal!</string>
    <string name="proud_of_you">We are proud of you.</string>
    <string name="ok">OK</string>

    <string name="yes_begin_now">Yes, Begin Now!</string>
    <string name="goal_days">%s days</string>
    <string name="goal_name">goal to get you %s</string>

</resources>
