<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_success_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <com.dlazaro66.wheelindicatorview.WheelIndicatorView
        android:id="@+id/success_wheel_indicator_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:backgroundColor="@color/white"
        app:filledPercent="40"
        app:itemsLineWidth="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:tag="@string/title"
        android:text="@string/congrats"
        android:textColor="@color/purple"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:tag="@string/content"
        android:text="@string/closer_to_goal"
        android:textColor="@color/purple"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:tag="@string/proud_of_you"
        android:text="@string/closer_to_goal"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_circular_corner"
        android:tag="@string/subtitle"
        android:text="@string/ok"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</LinearLayout>
