<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true"
    tools:context="com.cititmobilechallenge.citifit.activity.LoginActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/textCredential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:tag="@string/content"
        android:text="@string/credentials_required"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCredential"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_holo_light_white"
            android:hint="@string/username"
            android:padding="5dp"
            android:tag="@string/title"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_holo_light_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:tag="@string/title"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded_corner"
            android:tag="@string/subtitle"
            android:text="@string/begin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:tag="@string/subtitle"
        android:text="@string/dont_have_account"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
</RelativeLayout>


