<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.cititmobilechallenge.citifit.activity.ChosenGoalActivity">

    <ImageView
        android:id="@+id/chosen_goal_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/reward_image"
        android:src="@drawable/goal1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_circular_corner"
        android:tag="@string/subtitle"
        android:text="@string/yes_begin_now"
        android:onClick="onBeginBtnClicked"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</LinearLayout>
