<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_reward_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".RewardActivity">

    <RelativeLayout
        android:id="@+id/rl_reward_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/citifit_rewards_top"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/citifit_rewards_top" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:tag="@string/subtitle"
            android:text="@string/skip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btnSkip"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_rewardsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_reward_header"
        android:background="@color/bg_grey"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:tag="@string/title"
            android:text="@string/lets_get_started"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:tag="@string/title"
            android:text="@string/chose_your_reward"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:tag="@string/content"
            android:text="@string/reward_and_task"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_horizontalListContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_rewardsContainer"
        android:orientation="vertical">

        <!--
       Copyright (C) 2014 Lucas Rocha

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.
         -->

        <org.lucasr.twowayview.widget.TwoWayView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rewardListView"
            style="@style/TwoWayView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:drawSelectorOnTop="false"
            app:twowayview_layoutManager="ListLayoutManager"
            tools:context=".RewardActivity"
            />


    </LinearLayout>


</RelativeLayout>
